Complete buildHuffman & buildDictionary

--- a/huffman/CMakeLists.txt
+++ b/huffman/CMakeLists.txt
@@ -1,2 +1,6 @@
+set(libs
+        ../assignment3/bitree.h
+        ../assignment3/bitree.hpp Huffman.cpp Huffman.h)
+
 add_executable(huffman ${libs} main.cpp DataType.cpp DataType.h Config.h Config.cpp FileStructure.cpp FileStructure.h HashUtil.cpp HashUtil.h)
 target_link_libraries(huffman uiLib)
