Complete tui interface

--- a/assignment3/forest/CMakeLists.txt
+++ b/assignment3/forest/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(assignment3-forest ${libs} main.cpp forest.cpp forest.h forest.hpp)
+add_executable(assignment3-forest ${libs} main.cpp forest.h forest.hpp MainScene.h MainScene.cpp)
 target_link_libraries(assignment3-forest uiLib)
