Finish tui part of assignment4-mat

--- a/assignment4/mat/CMakeLists.txt
+++ b/assignment4/mat/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(assignment4-mat main.cpp Graph.cpp Graph.h ../Union.cpp ../Union.h)
+add_executable(assignment4-mat main.cpp Graph.cpp Graph.h ../Union.cpp ../Union.h MainScene.cpp MainScene.h)
 target_link_libraries(assignment4-mat uiLib)
