Finish tui part of list of assignment4

--- a/assignment4/list/CMakeLists.txt
+++ b/assignment4/list/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(assignment4-list main.cpp ../Union.cpp ../Union.h LGraph.cpp LGraph.h ../mat/Graph.cpp ../mat/Graph.h)
+add_executable(assignment4-list main.cpp ../Union.cpp ../Union.h LGraph.cpp LGraph.h ../mat/Graph.cpp ../mat/Graph.h MainScene.h MainScene.cpp)
 target_link_libraries(assignment4-list uiLib)
